--- a/style.css
+++ b/style.css
@@ -1,1 +1,7 @@
-
+body {
+  background-color: #FFE4C4; /* Bisque */
+  font-family: Arial, sans-serif; /* Jenis Huruf */
+  color: #000000; /*warna teks utama*/
+}
+  
+  
