--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
  body {
-  background-color: #faf9f5; /* Bisque */
+  background-color: #1a1a1a; 
   font-family: Arial, sans-serif; /* Jenis Huruf */
-  color: #000000; /*warna teks utama*/
+  color: #9d9d9d; /*warna teks utama*/
 }
 
 .kartu-profil {
