--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
 }
 
 .kartu-profil img {
-  widht: 150px;
+  widht: 60px; 
+  height: 100px 
   border-radius: 50%; /* ubah gambar persegi jadi melingkar*/
 }
