--- a/style.css
+++ b/style.css
@@ -16,6 +16,6 @@
 
 .kartu-profil img {
   widht: 60px; 
-  height: 100px 
-  border-radius: 50%; /* ubah gambar persegi jadi melingkar*/
+  height: 100px;
+  border-radius: 30%; /* ubah gambar persegi jadi melingkar*/
 }
